# fastapi-template

./: .dockerignore  .env.example  .env.traefik  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  justfile  pyproject.toml  ruff.toml
.github/workflows/: linters.yml
alembic/: env.py
alembic/versions/: 2026-05-19_create_item_table.py
docs/: middleware.md
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
src/: config.py  constants.py  database.py  main.py  models.py
src/items/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/items/: test_router.py
