[project]
name = "fastapi-template"
version = "0.1.0"
description = "A template for kickstarting new FastAPI projects"
authors = [{ name = "zhanymkanov" }, { name = "thedasken" }]
readme = "README.md"
license = { text = "UNLICENSED" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "alembic",
    "psycopg2-binary",
    "httpx",
    "pydantic[email]",
    "pydantic-settings",
    "asyncpg",
    "uvicorn[standard]",
    "sentry-sdk",
    "sqlalchemy[asyncio]",
]

[dependency-groups]
dev = [
    "ruff",
]
prod = [
    "gunicorn",
    "python-json-logger",
    "prometheus-client",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"