[project]
name = "fastapi-template"
version = "0.1.0"
description = "A template for kickstarting new FastAPI projects"
authors = [{ name = "zhanymkanov" }, { name = "thedasken" }]
readme = "README.md"
license = { text = "UNLICENSED" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "alembic",
    "psycopg2-binary",
    "httpx",
    "pydantic[email]",
    "pydantic-settings",
    "asyncpg",
    "uvicorn[standard]",
    "sentry-sdk",
    "sqlalchemy[asyncio]",
]

[dependency-groups]
dev = [
    "anyio[trio]",
    "httpx",
    "pre-commit>=4.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "ruff",
]
prod = [
    "gunicorn",
    "python-json-logger",
    "prometheus-client",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = ["ENVIRONMENT=TESTING"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
